--- a/pacotes.html
+++ b/pacotes.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="Css/style.css" />
     <link rel="stylesheet" href="Css/pacotes.css" />
     <script src="Js/slide.js" defer></script>
-    <title>Apollo Teck</title>
+    <title>Apollo Teck - Pacotes</title>
   </head>
   <body>
     <header>
@@ -73,7 +73,7 @@
       <p class="price">R$ 30,00</p>
       <a href="Recife.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
-    <div class="product" style="">
+    <div class="product" style="margin-left: 150px;">
       <a href=""
         ><img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
@@ -81,7 +81,7 @@
       <p class="price">R$ 30,00</p>
       <a href="Maragogi.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
-    <div class="product" style="margin-left: 150px">
+    <div class="product" style="">
       <a href=""
         ><img src="img/mar-e-praia.jpg" alt="Itá-img" width="90%" height="90%"
       /></a>
@@ -105,22 +105,11 @@
       <p class="price">R$ 30,00</p>
       <a href="Coqueirinho.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
-    <div class="product">
-      <a href="">
-        <img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%;">
-      </a>
-      <h2>Porto de Galinhas</h2>
-      <p class="price">R$ 30,00</p>
-      <a href="Porto de Galinhas.html"><button class="buy-btn">Ver Mais</button></a>
-    </div>
-    <div class="product">
-      <a href="">
-        <img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%;">
-      </a>
-      <h2>Manaus</h2>
-      <p class="price">R$ 30,00</p>
-      <a href="Manaus.html"><button class="buy-btn">Ver Mais</button></a>
+
     </div>
   </div>
+  <br>
+  <br>
+  br
   </body>
 </html>
