--- a/index2.html
+++ b/index2.html
@@ -14,13 +14,13 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container2">
             <div class="logo">
                 <img src="img/apllogo.png">
             </div>
             <div class="menu">
                 <nav>
-                    <a href="#home" style="margin-left: 80px;">Home</a>
+                    <a href="#home" style="margin-left: 50px;">Home</a>
                     <a href="pacotes.html">Pacotes</a>
                     <a href="#servicos">Nossos veiculos</a>
                   
