--- a/pagamento.html
+++ b/pagamento.html
@@ -49,7 +49,7 @@
                     <h4 class="my-0 fw-normal">Economica</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title" id="economicaPrice">R$ 150</h1>
+                    <h1 class="card-title pricing-card-title" id="economicaPrice">R$ 50</h1>
                     <ul class="list-unstyled mt-3 mb-4">
                         <li>Serviço personalizado</li>
                         <li>Alojamento em hotéis econômicos</li>
@@ -77,6 +77,7 @@
                         <li>Hospedagem em hotéis de médio a alto padrão</li>
                         <li>Passeios e experiências exclusivas</li>
                         <li>Assentos mais confortáveis em viagem</li>
+                        <li>Wi-Fi Incluso</li>
                     </ul>
                     <input type="checkbox" id="executivaAlimentacao" onchange="calcularPreco('executiva')"> Alimentação<br>
                     <input type="checkbox" id="executivaGuia" onchange="calcularPreco('executiva')"> Guia Turístico<br>
@@ -97,11 +98,11 @@
                     <ul class="list-unstyled mt-3 mb-4">
                         <li>Experiência de luxo completa</li>
                         <li>Acomodações de luxo em hotéis renomados</li>
+                        <li>Wi-fi Incluso </li>
                         <li>Atendimento VIP</li>
                         <li>Experiências exclusivas e personalizadas</li>
                     </ul>
                     <input type="checkbox" id="primeiraAlimentacao" onchange="calcularPreco('primeira')"> Alimentação<br>
-                    <input type="checkbox" id="primeiraWifi" onchange="calcularPreco('primeira')"> Wi-Fi<br>
                     <input type="checkbox" id="primeiraGuia" onchange="calcularPreco('primeira')"> Guia Turístico<br>
                     <input type="checkbox" id="primeiraAcessibilidade" onchange="calcularPreco('primeira')"> Acessibilidade e Necessidades Especiais<br><br>
                     <a href="boletos/salprimeira.pdf"><button type="button" class="w-100 btn btn-lg btn-primary">
@@ -114,41 +115,39 @@
 </main>
 
 <script>
-    function calcularPreco(classe) {
-        var precoInicial = 0;
+  function calcularPreco(classe) {
+      var precoInicial = 0;
 
-        // Define o preço inicial com base na classe selecionada
-        switch (classe) {
-            case 'economica':
-                precoInicial = 150;
-                break;
-            case 'executiva':
-                precoInicial = 300;
-                break;
-            case 'primeira':
-                precoInicial = 400;
-                break;
-            default:
-                break;
-        }
+      // Define o preço inicial com base na classe selecionada
+      switch (classe) {
+          case 'economica':
+              precoInicial = 50; // Ajustado para R$50
+              break;
+          case 'executiva':
+              precoInicial = 300;
+              break;
+          case 'primeira':
+              precoInicial = 400;
+              break;
+          default:
+              break;
+      }
 
-        // Verifica o estado dos checkboxes e aplica desconto conforme necessário
-        if (!document.getElementById(classe + 'Alimentacao').checked) {
-            precoInicial -= 10; // Reduz R$ 10 se a alimentação não estiver selecionada
-        }
-        if (classe !== 'executiva' && !document.getElementById(classe + 'Wifi').checked) {
-            precoInicial -= 20; // Reduz R$ 20 se o Wi-Fi não estiver selecionado (exceto na classe executiva)
-        }
-        if (!document.getElementById(classe + 'Guia').checked) {
-            precoInicial -= 30; // Reduz R$ 30 se o guia turístico não estiver selecionado
-        }
-        if (!document.getElementById(classe + 'Acessibilidade').checked) {
-            precoInicial -= 50; // Reduz R$ 50 se a acessibilidade e necessidades especiais não estiverem selecionadas
-        }
+      if (document.getElementById(classe + 'Alimentacao').checked) {
+          precoInicial += 10; 
+      }
+      if (classe !== 'primeira' && document.getElementById(classe + 'Wifi').checked) {
+          precoInicial += 20; 
+      }
+      if (document.getElementById(classe + 'Guia').checked) {
+          precoInicial += 30; 
+      }
+      if (document.getElementById(classe + 'Acessibilidade').checked) {
+          precoInicial += 50; 
+      }
 
-        // Atualiza o preço na página
-        document.getElementById(classe + 'Price').textContent = 'R$ ' + precoInicial.toFixed(2);
-    }
+      document.getElementById(classe + 'Price').textContent = 'R$ ' + precoInicial.toFixed(2);
+  }
 </script>
 
 </body>
