--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/slide.css">
     <link rel="stylesheet" href="Css/slider.css">
     <script src="Js/slide.js" defer></script>
     <title>Apollo Teck</title>
@@ -42,7 +41,7 @@
             <input type="radio" name="btn-radio" id="radio3">
 
             <div class="slide-box primeiro">
-                <img class="img-desktop" src="img/r1.jpg" alt="slide 1">
+                <img class="img-desktop" src="img/slide-1.jpg" alt="slide 1">
                 <img class="img-mobile" src="img/slide-1-mob.jpg" alt="slide 1">
             </div>
 
