--- a/Home.html
+++ b/Home.html
@@ -5,30 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="slide.css">
-    <script src="slide.js" defer></script>
+    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="Css/slider.css">
+    <script src="Js/slide.js" defer></script>
     <title>Apollo Teck</title>
     
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="logo"></div>
+        <div class="container2">
+            <div class="logo">
+                <img src="img/apllogo.png">
+            </div>
             <div class="menu">
                 <nav>
-                    <a href="#home">Home</a>
-                    <a href="#sobre">Sobre</a>
-                    <a href="#equipe">Nossa Equipe</a>
-                    <a href="#servicos">Serviços</a>
-                    <a href="#contato">Contato</a>
+                    <a href="index2.html" style="margin-left: 50px;">Home</a>
+                    <a href="pacotes.html">Pacotes</a>
+                  
                 </nav>
             </div>
 
             <div class="social">
-                <button><i class="fa-brands fa-instagram"></i></button>
-                <button><i class="fa-brands fa-facebook-f"></i></button>
-                <button><i class="fa-brands fa-youtube"></i></button>
+               <button onclick="window.location.href='https://www.instagram.com/apolloteck?igsh=c2FueTdwcW1lZzZl'"><i class="fa-brands fa-instagram"></i></button>
+               <button onclick="window.location.href='https://wa.me/558182586873'"><i class="fa-brands fa-whatsapp"></i></button> 
             </div>
         </div>
     </header>
