--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
             </div>
             <div class="menu">
                 <nav>
-                    <a href="#home" style="margin-left: 50px;">Home</a>
+                    <a href="Home.html" style="margin-left: 50px;">Home</a>
                     <a href="pacotes.html">Pacotes</a>
                   
                 </nav>
