--- a/pacotes.html
+++ b/pacotes.html
@@ -21,9 +21,8 @@
         </div>
         <div class="menu">
           <nav>
-            <a href="index2.html" style="margin-left: 80px">Home</a>
+            <a href="Home.html" style="margin-left: 80px">Home</a>
             <a href="pacotes.html">Pacotes</a>
-            <a href="#servicos">Nossos veiculos</a>
           </nav>
         </div>
         <div class="social">
